package br.com.logistica.exception; 
public class DadosInvalidosException extends LogisticaException { 
    public DadosInvalidosException(String message) { super(message); } 
} 
